--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,6 @@
 {
     "name": "bookstore",
+    "author": "Shwetakshi Priya",
     "version": "1.0.0",
     "description": "mern project",
     "main": "index.js",
@@ -8,16 +9,6 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon index.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/akhil2k-lc/bookStoreApp.git"
-    },
-    "author": "Akhil",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/akhil2k-lc/bookStoreApp/issues"
-    },
-    "homepage": "https://github.com/akhil2k-lc/bookStoreApp#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
